clusters/production/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: seerr
  selector:
    app: seerr
